--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
@@ -23,14 +24,17 @@
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "^0.76.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
