--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@expo/metro-runtime": "~4.0.1",
+    "@expo/ngrok": "^4.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
