--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7.26.0",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/ngrok": "^4.1.3",
+    "@react-native-community/cli": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
@@ -24,8 +25,10 @@
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
+    "fusioncharts": "^3.18.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
+    "react-fusioncharts": "^4.1.0",
     "react-native": "^0.76.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.22.0",
@@ -44,6 +47,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "cross-env": "^7.0.3",
+    "react-native-gantt-chart": "^1.0.6",
     "typescript": "^5.7.3"
   },
   "private": true
