fix to workflow

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -132,8 +132,8 @@ jobs:
           for service in "${services[@]}"; do
             image_id=$(docker-compose images --quiet "$service")
             if [ -n "$image_id" ]; then
-              docker tag "$image_id" "${{ secrets.DOCKERHUB_USERNAME }}/shift_images_repository:$service-latest"
-              docker push "${{ secrets.DOCKERHUB_USERNAME }}/shift_images_repository:$service-latest"
+              docker tag "$image_id" "${{ secrets.DOCKERHUB_USERNAME }}/myrepo:$service-latest"
+              docker push "${{ secrets.DOCKERHUB_USERNAME }}/myrepo:$service-latest"
             fi
           done
         working-directory: ./backend
