--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "assetBundlePatterns": ["assets/**/*"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
